--- a/LA.Web/Views/Home/Index.cshtml
+++ b/LA.Web/Views/Home/Index.cshtml
@@ -3,8 +3,6 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome to my imagination</h1>
-
+    <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-    <a>pierwsza strona</a>
 </div>
